# stl-viewer

./: .gitignore  CMakeLists.txt  GITHUB_SETUP.md  LICENSE  README.md  build.sh
.github/workflows/: build.yml
examples/: README.md  cube.stl  cylinder.stl  octahedron.stl  pyramid.stl  tetrahedron.stl
include/: mainwindow.h  stlloader.h  stlviewer.h
src/: main.cpp  mainwindow.cpp  stlloader.cpp  stlviewer.cpp
